sweetness and 0% no longer overlap

--- a/frontend/src/views/Customer.css
+++ b/frontend/src/views/Customer.css
@@ -211,6 +211,7 @@ button {
     width: 150px;
     font-weight: bold;
     color: black;
+    margin-right: 60px;
 }
 
 .option-buttons {
