--- a/frontend/src/views/Employee.css
+++ b/frontend/src/views/Employee.css
@@ -164,6 +164,7 @@ button {
     width: 150px;
     font-weight: bold;
     color: white;
+    margin-right: 60px;
 }
 
 .option-buttons {
